<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:id="@+id/input_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_original_principal"
        android:inputType="numberDecimal"
        android:autofillHints="principalAmount"
        />

    <EditText
        android:id="@+id/input_years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_years"
        android:inputType="number"
        android:autofillHints="years"
        />

    <EditText
        android:id="@+id/input_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_interest_percentage"
        android:inputType="numberDecimal"
        android:autofillHints="interestPercent"
        />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_calculate"
        android:onClick="calculate"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_hint"
        />

</LinearLayout>